gitops/espresso/infrastructure/controllers/netbird-operator/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: netbird
  labels:
    gateway-access: public
    pod-security.kubernetes.io/enforce: baseline
