gitops/espresso/infrastructure/controllers/netbird-operator/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-netbird-operator-webhook
  namespace: netbird
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: netbird-operator
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - port: 443
          protocol: TCP
